--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     		<div id="wrapper_header_content">
         
     			<div id="logo">
-            		<img src="img/Logo.png" alt="Webfurious Designs" style="max-width:100%; max-height:auto;">
+            		<img src="img/logo.png" alt="Webfurious Designs" style="max-width:100%; max-height:auto;">
         		</div>
  
  	       </div>
