--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,6 @@
 		<div class="w3-container">
 			<section class="w3-content">
 				<a href="index.html">Home</a>
-				<a href="about.html" class="w3-hide-small">About</a>
 				<a href="services.html" class="w3-hide-small">Services</a>
 				<a href="portfolio.html" class="w3-hide-small">Portfolio</a>
 				<a href="contact.html" class="w3-hide-small active">Contact</a>
@@ -70,10 +69,9 @@
 	
 	<nav id="mobile-nav" class="w3-hide w3-hide-large w3-hide-medium">
 	
-		<a href="#">About</a>
-		<a href="#">Services</a>
-		<a href="#">Portfolio</a>
-		<a href="#">Contact</a>
+		<a href="services.html">Services</a>
+		<a href="portfolio.html">Portfolio</a>
+		<a href="contact.html">Contact</a>
 	
 	</nav>
 	<!-- End Main Navigation -->
@@ -131,7 +129,6 @@
 			<div id="links" class="w3-third">
 				<h1>Quick Links</h1>
 				<a href="index.html">Home</a>
-				<a href="about.html">About</a>
 				<a href="services.html">Services</a>
 				<a href="portfolio.html">Portfolio</a>
 				<a href="contact.html">Contact</a>
