--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</div>
 			
 			<div class="w3-block-item w3-quarter w3-hide-small w3-hide-medium">
-				<a href="#" id="quote-btn">Get a Quote Now</a>
+				<a href="mailto: webfuriousdesigns@gmail.com" id="quote-btn">Get a Quote Now</a>
 			</div>
 			<!-- End Logo -->
 			
@@ -59,7 +59,6 @@
 			<div class="w3-container">
 				<section class="w3-content">
 					<a class="active" href="">Home</a>
-					<a href="about.html" class="w3-hide-small">About</a>
 					<a href="services.html" class="w3-hide-small">Services</a>
 					<a href="portfolio.html" class="w3-hide-small">Portfolio</a>
 					<a href="contact.html" class="w3-hide-small">Contact</a>
@@ -70,10 +69,9 @@
 		
 		<nav id="mobile-nav" class="w3-hide w3-hide-large w3-hide-medium">
 			
-					<a href="#">About</a>
-					<a href="#">Services</a>
-					<a href="#">Portfolio</a>
-					<a href="#">Contact</a>
+					<a href="services.html">Services</a>
+					<a href="portfolio.html">Portfolio</a>
+					<a href="contact.html">Contact</a>
 			
 		</nav>
 		<!-- End Main Navigation -->
@@ -83,6 +81,7 @@
 			<img class="slides w3-animate-fading" src="img/slider/slide01.png" alt="" />
 			<img class="slides w3-animate-fading" src="img/slider/slide02.png" alt="" />
 			<img class="slides w3-animate-fading" src="img/slider/slide03.png" alt="" />
+			<img class="slides w3-animate-fading" src="img/slider/slide04.png" alt="" />
 		</div>
 	</div>
 	<!-- End Slider Section -->
@@ -142,7 +141,7 @@
 				<p>We're always on the look out for new projects and clients so if you've got an idea don't delay. Request a free quote today!</p>
 			</section>
 			<section class="w3-mobile">
-				<a href="#" id="quote-button">Get a Quote Now</a>
+				<a href="mailto: webfuriousdesigns@gmail.com" id="quote-button">Get a Quote Now</a>
 			</section>
 		</div>
 	
@@ -175,7 +174,6 @@
 			<div id="links" class="w3-third">
 				<h1>Quick Links</h1>
 				<a href="index.html">Home</a>
-				<a href="about.html">About</a>
 				<a href="services.html">Services</a>
 				<a href="portfolio.html">Portfolio</a>
 				<a href="contact.html">Contact</a>
@@ -257,7 +255,7 @@
 			slideIndex++;
 			if (slideIndex > x.length) {slideIndex = 1}
 			x[slideIndex-1].style.display = "block";
-			setTimeout(carousel, 10000); // Change image every 2 seconds
+			setTimeout(carousel, 15000); // Change image every 15 seconds
 		}
 		
 	</script>
