--- a/contact.html
+++ b/contact.html
@@ -34,9 +34,9 @@
 			<!-- Top Bar -->
 			<div id="top-bar">
 				<div id="maint"></div>
-				<a href="http://www.youtube.com/channel/UCtINONwxOcWa2uHy2uD6KAA"><img src="img/icons/04.png" alt="" /></a>
-                <a href="https://twitter.com/Webfurious"><img src="img/icons/03.png" alt="" /></a>
-                <a href="https://www.facebook.com/WebfuriousDes"><img src="img/icons/01.png" alt="" /></a>
+				<a href="www.youtube.com/channel/UCtINONwxOcWa2uHy2uD6KAA"><img src="img/icons/04.png" alt="" /></a>
+                <a href="www.twitter.com/Webfurious"><img src="img/icons/03.png" alt="" /></a>
+                <a href="www.facebook.com/WebfuriousDes"><img src="img/icons/01.png" alt="" /></a>
 			</div>
 			<!-- End Top Bar -->
 		
@@ -46,7 +46,7 @@
 			</div>
 			
 			<div class="w3-block-item w3-quarter w3-hide-small w3-hide-medium">
-				<a href="#" id="quote-btn">Get a Quote Now</a>
+				<a href="mailto: webfuriousdesigns@gmail.com" id="quote-btn">Get a Quote Now</a>
 			</div>
 			<!-- End Logo -->
 			
@@ -91,9 +91,9 @@
 				<h3>E-mail</h3>
 				<p><a href="mailto:webfuriousdesigns@gmail.com"><b>webfuriousdesigns@gmail.com</b></a></p>
 				<h3>Facebook : </h3>
-				<p><a href="https://www.facebook.com/WebfuriousDes"><b>www.facebook.com/Webfurious-Designs</b></a></p>
+				<p><a href="www.facebook.com/WebfuriousDes"><b>www.facebook.com/WebfuriousDes</b></a></p>
 				<h3>Twitter:</h3>
-				<p><a href="http://twitter.com/Webf_Designs"><b>@Webf_Designs</b></a></p>
+				<p><a href="www.twitter.com/Webf_Designs"><b>@Webf_Designs</b></a></p>
 			</div>
 		
 			<div class="w3-half">
