--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,9 @@
 			<!-- Top Bar -->
 			<div id="top-bar">
 				<div id="maint"></div>
-				<a href="http://www.youtube.com/channel/UCtINONwxOcWa2uHy2uD6KAA"><img src="img/icons/04.png" alt="" /></a>
-                <a href="https://twitter.com/Webfurious"><img src="img/icons/03.png" alt="" /></a>
-                <a href="https://www.facebook.com/WebfuriousDes"><img src="img/icons/01.png" alt="" /></a>
+				<a href="www.youtube.com/channel/UCtINONwxOcWa2uHy2uD6KAA"><img src="img/icons/04.png" alt="" /></a>
+                <a href="www.twitter.com/Webfurious"><img src="img/icons/03.png" alt="" /></a>
+                <a href="www.facebook.com/WebfuriousDes"><img src="img/icons/01.png" alt="" /></a>
 			</div>
 			<!-- End Top Bar -->
 		
@@ -46,7 +46,7 @@
 			</div>
 			
 			<div class="w3-block-item w3-quarter w3-hide-small w3-hide-medium">
-				<a href="#" id="quote-btn">Get a Quote Now</a>
+				<a href="mailto: webfuriousdesigns@gmail.com" id="quote-btn">Get a Quote Now</a>
 			</div>
 			<!-- End Logo -->
 			
