--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 			<!-- Top Bar -->
 			<div id="top-bar">
 				<div id="maint"></div>
-				<a href="www.youtube.com/channel/UCtINONwxOcWa2uHy2uD6KAA"><img src="img/icons/04.png" alt="" /></a>
-                <a href="www.twitter.com/Webfurious"><img src="img/icons/03.png" alt="" /></a>
-                <a href="www.facebook.com/WebfuriousDes"><img src="img/icons/01.png" alt="" /></a>
+				<a href="http://youtube.com/channel/UCtINONwxOcWa2uHy2uD6KAA"><img src="img/icons/04.png" alt="" /></a>
+                <a href="http://twitter.com/Webfurious"><img src="img/icons/03.png" alt="" /></a>
+                <a href="http://facebook.com/WebfuriousDes"><img src="img/icons/01.png" alt="" /></a>
 			</div>
 			<!-- End Top Bar -->
 		
