--- a/form-builder.html
+++ b/form-builder.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webfurious Designs</title>
 
+	<script src="js/form-render.min.js"></script>
 	<script src="js/form-builder.min.js"></script>
     
 </head>
