--- a/download.html
+++ b/download.html
@@ -115,4 +115,42 @@
     <h4>Download the APK</h4>
     <p>
       Click the link below to download the installation file:<br>
-      <a href="https://www.dropbox.com/scl/fi/fcjj
+      <a href="https://www.dropbox.com/scl/fi/fcjj1sf384bt0rghho887/StudioFlow_release.apk?dl=1">
+        StudioFlow — Alpha 0.01 (APK)
+      </a>
+    </p>
+
+    <h4>Install the APK</h4>
+    <p>
+      Locate the downloaded file (usually in your Downloads folder) and tap it to begin installation.<br><br>
+
+      If prompted, enable <b>Install unknown apps</b> or <b>Allow from this source</b> for your browser or file manager.
+      <br><br>
+
+      <b>Typical path:</b><br>
+      Settings → Apps → Special app access → Install unknown apps → select browser/file manager → Allow
+    </p>
+
+    <h4>Security Note</h4>
+    <p>
+      Android may warn that the app is from an untrusted source. This is normal for non-Play Store alpha builds.
+      The APK is built by me, but feel free to scan it for peace of mind.
+    </p>
+
+    <h4>Troubleshooting</h4>
+    <p>
+      If you encounter installation issues, please report:<br>
+      Android version<br>
+      Device model<br>
+      Exact error message<br>
+      Screenshot if possible
+    </p>
+
+    <p>
+      <b>Report issues to:</b><br>
+      Tony — (815) 596-0713
+    </p>
+
+  </div>
+</body>
+</html>
