--- a/download.html
+++ b/download.html
@@ -115,7 +115,7 @@
     <h4>Download the APK</h4>
     <p>
       Click the link below to download the installation file:<br>
-      <a href="https://www.dropbox.com/scl/fi/fcjj1sf384bt0rghho887/StudioFlow_release.apk?dl=1">
+      <a href="https://www.dropbox.com/scl/fi/egm3oubri5wpzoa2mk2le/StudioFlow_release.apk?rlkey=c9te4m9fgztuhzshiow1u7ok5&st=x9nmsnei&dl=0">
         StudioFlow — Alpha 0.01 (APK)
       </a>
     </p>
