--- a/download.html
+++ b/download.html
@@ -115,7 +115,7 @@
     <h4>Download the APK</h4>
     <p>
       Click the link below to download the installation file:<br>
-      <a href="https://drive.google.com/file/d/1Id11lK3IqFYh-NbYKuOpQ_OHi5QWUNq1/view?usp=drive_link">
+      <a href="https://webfurious.github.io/StudioFlow_release.apk">
         StudioFlow — Alpha 0.01 (APK)
       </a>
     </p>
