Add installation instructions for StudioFlow Alpha
Added installation instructions and features overview for StudioFlow Alpha release.

--- a/studioflow.html
+++ b/studioflow.html
@@ -1,1 +1,157 @@
-because I was like oh my God I love you too baby girl I love you too baby girl I love you too baby girl I love you too baby girl I love you too baby girl 💟 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+
+  <!-- THIS is the most important line for mobile -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>StudioFlow Download</title>
+
+  <style>
+    body {
+      margin: 0;
+      padding: 16px;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+      background-color: #f9f9f9;
+      color: #222;
+      line-height: 1.6;
+    }
+
+    .container {
+      max-width: 720px;
+      margin: 0 auto;
+      background: #ffffff;
+      padding: 20px;
+      border-radius: 8px;
+    }
+
+    h3 {
+      font-size: 1.4rem;
+      margin-top: 0;
+    }
+
+    h4 {
+      font-size: 1.1rem;
+      margin-top: 24px;
+    }
+
+    p {
+      font-size: 1rem;
+    }
+
+    a {
+      display: inline-block;
+      margin-top: 8px;
+      color: #0066cc;
+      word-break: break-word;
+    }
+
+    b {
+      font-weight: 600;
+    }
+
+    /* Small phones */
+    @media (max-width: 480px) {
+      body {
+        padding: 12px;
+      }
+
+      .container {
+        padding: 16px;
+      }
+
+      h3 {
+        font-size: 1.25rem;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+
+    <h3>StudioFlow Alpha Release — Installation Instructions</h3>
+
+    <p>
+      <b>Features Available for Testing</b><br>
+      This is an early build, so only a core subset of features is currently available and functional.<br>
+      The app focuses on simple, effective business management for freelancers and small creative businesses.
+      <br><br>
+
+      <b>Currently Available Sections (Fully Functional with CRUD Operations)</b><br><br>
+
+      <b>Client Management</b><br>
+      — Create new clients<br>
+      — View client details<br>
+      — Edit existing client information<br>
+      — Delete clients<br><br>
+
+      <b>Project Management</b><br>
+      — Create new projects (with client auto-complete/lookup from the Client database)<br>
+      — View project details<br>
+      — Edit project information<br>
+      — Delete projects<br><br>
+
+      <b>Invoice Management</b><br>
+      — Create new invoices (with client and project auto-complete/lookup)<br>
+      — View invoice details<br>
+      — Edit invoice information<br>
+      — Delete invoices<br><br>
+
+      <b>Dashboard Overview</b><br>
+      Displays recent activity (last 5 items) for clients, projects, and invoices<br>
+      Shows due and overdue invoices with basic highlighting
+      <br><br>
+
+      <b>Important Notes for Alpha Testers</b><br>
+      This is a very early alpha — many sections
+      <b>(e.g., full scheduling/tasks, financial summaries, reporting, advanced settings)</b>
+      are still under development and not yet available.<br>
+      All data is stored securely in a private Firebase backend, but please avoid entering sensitive real-world information during testing.<br>
+      Bugs, crashes, and incomplete features are expected. Your feedback is incredibly valuable.
+    </p>
+
+    <h4>Download the APK</h4>
+    <p>
+      Click the link below to download the installation file:<br>
+      <a href="https://webfurious.github.io/StudioFlow_release.apk">
+        StudioFlow — Alpha 0.01 (APK)
+      </a>
+    </p>
+
+    <h4>Install the APK</h4>
+    <p>
+      Locate the downloaded file (usually in your Downloads folder) and tap it to begin installation.<br><br>
+
+      If prompted, enable <b>Install unknown apps</b> or <b>Allow from this source</b> for your browser or file manager.
+      <br><br>
+
+      <b>Typical path:</b><br>
+      Settings → Apps → Special app access → Install unknown apps → select browser/file manager → Allow
+    </p>
+
+    <h4>Security Note</h4>
+    <p>
+      Android may warn that the app is from an untrusted source. This is normal for non-Play Store alpha builds.
+      The APK is built by me, but feel free to scan it for peace of mind.
+    </p>
+
+    <h4>Troubleshooting</h4>
+    <p>
+      If you encounter installation issues, please report:<br>
+      Android version<br>
+      Device model<br>
+      Exact error message<br>
+      Screenshot if possible
+    </p>
+
+    <p>
+      <b>Report issues to:</b><br>
+      webfuriousdesigns@gmail.com<br>
+      Support — (815) 596-0713
+    </p>
+
+  </div>
+</body>
+</html>
